==> z14git/rt-thread/bsp/stm32/stm32f103-atk-nano/applications/APDS9960.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include <board.h>
#include "APDS9960.h"
#include <stdint.h>
#include <stdbool.h>
#define APDS9960_I2CBUS_NAME "i2c1"

int readGesture()
{
    uint8_t fifo_level = 0;
    int bytes_read = 0;
    uint8_t fifo_data[64];
    uint8_t fifo_data2[64];
    uint8_t gstatus;
    int motion;
    int i;
    
    /* Make sure that power and gesture is on and data is valid */
    if( !isGestureAvailable() || !(getMode() & 0x41 /* 0b01000001 */) ) {
        return DIR_NONE;
    }
    
    /* Keep looping as long as gesture data is valid */
    while(1) {
    
        /* Wait some time to collect next batch of FIFO data */
        rt_thread_mdelay(FIFO_PAUSE_TIME);
        
        /* Get the contents of the STATUS register. Is data still valid? */
        gstatus = wireReadDataByte(APDS9960_GSTATUS);
        
        
        
        /* If we have valid data, read in FIFO */
        if( (gstatus & APDS9960_GVALID) == APDS9960_GVALID ) 
        {
            /* Read the current FIFO level */
         fifo_level= wireReadDataByte(APDS9960_GFLVL);  
    

            /* If there's stuff in the FIFO, read it into our data block */
            if( fifo_level > 0) {
                
              if(fifo_level < 17)
              {
                bytes_read = wireReadDataBlock(  APDS9960_GFIFO_U, 
                                                (uint8_t*)fifo_data, 
                                                (fifo_level * 4) );
              } else 
              {
                bytes_read = wireReadDataBlock(  APDS9960_GFIFO_U, 
                                                (uint8_t*)fifo_data2, 
                                                (fifo_level * 4) );
              }

 
                if( bytes_read == -1 ) 
                {
                    return ERROR;
                }


                /* If at least 1 set of data, sort the data into U/D/L/R */
                if( bytes_read >= 4 ) 
                {

                    for( i = 0; i < bytes_read; i += 4 ) {
                        gesture_data_.u_data[gesture_data_.index] = \
                                                            fifo_data[i + 0];
                        gesture_data_.d_data[gesture_data_.index] = \
                                                            fifo_data[i + 1];
                        gesture_data_.l_data[gesture_data_.index] = \
                                                            fifo_data[i + 2];
                        gesture_data_.r_data[gesture_data_.index] = \
                                                            fifo_data[i + 3];
                        gesture_data_.index++;
                        gesture_data_.total_gestures++;
                    }

                    /* Filter and process gesture data. Decode near/far state */
                    if( processGestureData() ) 
                    {
                     
                        if( decodeGesture() ) {
                            //***TODO: U-Turn Gestures
           }
                    }
                    
                    /* Reset data */
                    gesture_data_.index = 0;
                    gesture_data_.total_gestures = 0;
                }
            }
        } else {
    
            /* Determine best guessed gesture and clean up */
            rt_thread_mdelay(FIFO_PAUSE_TIME);
            decodeGesture();
            motion = gesture_motion_;

            resetGestureParameters();

            return motion;
        }
    }
}

int wireReadDataBlock(   uint8_t reg, uint8_t *val, unsigned int len)
{
    struct rt_i2c_msg msgs[2];

    msgs[0].addr = APDS9960_I2C_ADDR;
    msgs[0].flags = RT_I2C_WR;
    msgs[0].buf = &reg;
    msgs[0].len = 1;

    msgs[1].addr = APDS9960_I2C_ADDR;
    msgs[1].flags = RT_I2C_RD;
    msgs[1].buf = val;
    msgs[1].len = len;

    if(rt_i2c_transfer(apds9960_i2c_bus, msgs, 2) == 2) {
        return len;
    } else {
        return -1;
    }
}

int wireWriteDataByte(unsigned char reg, unsigned char val)
{
  
    struct rt_i2c_msg msgs;
    uint8_t buffer[2];
    buffer[ 0 ] = reg;
    buffer[ 1 ] = val;

    msgs.addr = APDS9960_I2C_ADDR;
    msgs.flags = RT_I2C_WR;
    msgs.buf = buffer;
    msgs.len = sizeof(buffer);

    if(rt_i2c_transfer(apds9960_i2c_bus, &msgs, 1) == 1) {
        return 1; // true
    } else {
        return 0; // false
    }
}

 unsigned char wireReadDataByte(unsigned char reg)
{
    struct rt_i2c_msg msgs[2];
    unsigned char val[1];

    msgs[0].addr = APDS9960_I2C_ADDR;
    msgs[0].flags = RT_I2C_WR;
    msgs[0].buf = &reg;
    msgs[0].len = 1;

    msgs[1].addr = APDS9960_I2C_ADDR;
    msgs[1].flags = RT_I2C_RD;
    msgs[1].buf = val;
    msgs[1].len = 1;

    if (rt_i2c_transfer(apds9960_i2c_bus, msgs, 2) == 2) {
        return val[0];
    } else {
        return 0xff;
    }
}
