==> vanceb/ESP32_Clock/code/main/APDS9960.c <==
 #include <stdint.h>
 #include "driver/i2c.h"
 #include "esp_log.h"
 #include "APDS9960.h"
 #define LOG_LOCAL_LEVEL ESP_LOG_DEBUG

int readGesture()
{
    uint8_t fifo_level = 0;
    uint8_t bytes_read = 0;
    uint8_t fifo_data[128];
    uint8_t gstatus;
    int motion;
    int i;
    
    /* Make sure that power and gesture is on and data is valid */
    if( !isGestureAvailable() || !(getMode() & 0b01000001) ) {
        return DIR_NONE;
    }
    
    /* Keep looping as long as gesture data is valid */
    while(1) {
    
        /* Wait some time to collect next batch of FIFO data */
        vTaskDelay(FIFO_PAUSE_TIME / portTICK_PERIOD_MS);
        
        /* Get the contents of the STATUS register. Is data still valid? */
        if( !wireReadDataByte(APDS9960_GSTATUS, &gstatus) ) {
            return ERROR;
        }
        
        /* If we have valid data, read in FIFO */
        if( (gstatus & APDS9960_GVALID) == APDS9960_GVALID ) {
        
            /* Read the current FIFO level */
            if( !wireReadDataByte(APDS9960_GFLVL, &fifo_level) ) {
                return ERROR;
            }

            ESP_LOGD(TAG, "FIFO Level: %d", fifo_level);

            /* If there's stuff in the FIFO, read it into our data block */
            if( fifo_level > 0) {
                bytes_read = wireReadDataBlock(  APDS9960_GFIFO_U, 
                                                (uint8_t*)fifo_data, 
                                                (fifo_level * 4) );
                if( bytes_read == -1 ) {
                    return ERROR;
                }

                ESP_LOGD(TAG, "FIFO Data: ");
                ESP_LOG_BUFFER_HEX_LEVEL(TAG, fifo_data, fifo_level*4, ESP_LOG_DEBUG);

                /* If at least 1 set of data, sort the data into U/D/L/R */
                if( bytes_read >= 4 ) {
                    for( i = 0; i < bytes_read; i += 4 ) {
                        gesture_data_.u_data[gesture_data_.index] = \
                                                            fifo_data[i + 0];
                        gesture_data_.d_data[gesture_data_.index] = \
                                                            fifo_data[i + 1];
                        gesture_data_.l_data[gesture_data_.index] = \
                                                            fifo_data[i + 2];
                        gesture_data_.r_data[gesture_data_.index] = \
                                                            fifo_data[i + 3];
                        gesture_data_.index++;
                        gesture_data_.total_gestures++;
                    }
                    
                    ESP_LOGD(TAG, "Up Data: ");
                    ESP_LOG_BUFFER_HEX_LEVEL(TAG, gesture_data_.u_data, gesture_data_.total_gestures, ESP_LOG_DEBUG);

                    /* Filter and process gesture data. Decode near/far state */
                    if( processGestureData() ) {
                        if( decodeGesture() ) {
                            //***TODO: U-Turn Gestures
#if DEBUG
                            //Serial.println(gesture_motion_);
#endif
                        }
                    }
                    
                    /* Reset data */
                    gesture_data_.index = 0;
                    gesture_data_.total_gestures = 0;
                }
            }
        } else {
    
            /* Determine best guessed gesture and clean up */
            vTaskDelay(FIFO_PAUSE_TIME / portTICK_PERIOD_MS);
            decodeGesture();
            motion = gesture_motion_;
            ESP_LOGD(TAG, "End of gesture processing.  Result: %d", gesture_motion_);
            resetGestureParameters();
            return motion;
        }
    }
}

static bool wireWriteDataByte(uint8_t APDS9960_reg, uint8_t val)
{
    return i2c_master_write_slave(I2C_PORT_NUM,
                                  APDS9960_I2C_ADDR, 
                                  APDS9960_reg,
                                  &val,
                                  1) == ESP_OK ? true : false;
}

static bool wireReadDataByte(uint8_t APDS9960_reg, uint8_t *val)
{
    return i2c_master_read_slave(I2C_PORT_NUM,
                                 APDS9960_I2C_ADDR,
                                 APDS9960_reg,
                                 val,
                                 1) == ESP_OK ? true : false;   
}

static int wireReadDataBlock(  uint8_t APDS9960_reg, 
                        uint8_t *val, 
                        unsigned int len)
{
    return i2c_master_read_slave(I2C_PORT_NUM,
                                 APDS9960_I2C_ADDR,
                                 APDS9960_reg,
                                 val,
                                 len) == ESP_OK ? len : -1;
}
